@@ -12,6 +12,7 @@
 pluginName = Sirius Commons
 providerName = Eclipse Modeling Project
 
+extension-point.resource_sync_backend.name = org.eclipse.sirius.common.resource_sync_backend
 extension-point.classloading_override.name = org.eclipse.sirius.common.classloading_override
 extension-point.dynamicPackages.name = Forked Ecore Package Registry for Dynamic Packages
 extension-point.editingDomainFactory.name = org.eclipse.sirius.common.editingDomainFactory
