@@ -12,6 +12,10 @@ h3. Specifier-Visible Changes
 
 h3. Developer-Visible Changes
 
+h4. Changes in @org.eclipse.sirius.common@
+
+* <span class="label label-success">Added</span> An extension point:@org.eclipse.sirius.common.resource_sync_backend@ so that specific @AbstractResourceSyncBackend@ can be contributed by other plugins. These classes are responsible for notifying the session when an external change impacted on or several resources currently loaded.
+
 h4. Changes in @org.eclipse.sirius.tests.junit.support@
 
 * <span class="label label-success">Added</span> The utility method @org.eclipse.sirius.tests.support.api.TestsUtil.setTargetPlatform()@ has been added to allow to load a PDE target platform according to all known OSGi bundles. It is usefull to compile a plug-in in the execution runtime of the tests.
